// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lane R2 — the phone is unchanged (golden) coi-vault at rest, iOS 390 1`] = `
{
  "lines": 444,
  "sha256": "f015b2f48435303d3c3ff68e7b754b98e5c47e8b3e2b36501ac795253b78c143",
}
`;

exports[`lane R2 — the phone is unchanged (golden) coi-vault at rest, web 390 1`] = `
{
  "lines": 444,
  "sha256": "f015b2f48435303d3c3ff68e7b754b98e5c47e8b3e2b36501ac795253b78c143",
}
`;

exports[`lane R2 — the phone is unchanged (golden) coi-vault at rest, web 768 1`] = `
{
  "lines": 444,
  "sha256": "f015b2f48435303d3c3ff68e7b754b98e5c47e8b3e2b36501ac795253b78c143",
}
`;

exports[`lane R2 — the phone is unchanged (golden) coi-vault?subId=S1 (the detail early return), iOS 390 1`] = `
{
  "lines": 704,
  "sha256": "f1e934391ac9b9febf9ea838d1692e691f1ab5c0a5addfba58d0c0e4189f650c",
}
`;

exports[`lane R2 — the phone is unchanged (golden) subs add sheet (add-sub), iOS 390 1`] = `
{
  "lines": 817,
  "sha256": "1e579a71e6af455198bd3a75b55a513c99c5e0a8002bb5ee2d9493b1023ddf88",
}
`;

exports[`lane R2 — the phone is unchanged (golden) subs at rest, iOS 390 1`] = `
{
  "lines": 817,
  "sha256": "196a88bfac54d02d1944acb59fe0a58c216fbf89a3aebf868364d3b21b8ba887",
}
`;

exports[`lane R2 — the phone is unchanged (golden) subs at rest, web 390 1`] = `
{
  "lines": 817,
  "sha256": "196a88bfac54d02d1944acb59fe0a58c216fbf89a3aebf868364d3b21b8ba887",
}
`;

exports[`lane R2 — the phone is unchanged (golden) subs at rest, web 768 1`] = `
{
  "lines": 817,
  "sha256": "196a88bfac54d02d1944acb59fe0a58c216fbf89a3aebf868364d3b21b8ba887",
}
`;

exports[`lane R2 — the phone is unchanged (golden) subs detail open (sub-S1), iOS 390 1`] = `
{
  "lines": 994,
  "sha256": "053b9050ad5215cab76979872920cc25a35a90e0f17031581c144039d7be251d",
}
`;
